--- a/app/components/MessageList/styles.scss
+++ b/app/components/MessageList/styles.scss
@@ -2,5 +2,5 @@
 
 .messages-list__list {
   list-style: none;
-  padding-left: 60px;
+  padding-left: $messages_avatar_left_padding;
 }
