--- a/app/components/Messages/styles.scss
+++ b/app/components/Messages/styles.scss
@@ -1,16 +1,21 @@
 @import '~styles/variables.scss';
 
 .messages {
-  padding-top: $header_height;
+  top: $header_height;
   margin-bottom: $composer_height;
+  left: 0;
+  right: 0;
   padding-right: 2.5vw;
   padding-left: 2.5vw;
   box-sizing: border-box;
-  min-height: calc(100vh - #{$composer_height});
+  //min-height: calc(100vh - #{$composer_height});
+  max-height: 100vh;
+  overflow: auto;
   min-width: calc(100vw - #{$threads_width});
-  position: relative;
+  position: absolute;
 
   @media (max-width: 800px) {
-    padding-top: calc(#{$header_height} / 2);
+    top: calc(#{$header_height} / 2);
+    max-width: 100vw;
   }
 }
